--- a/style/index.css
+++ b/style/index.css
@@ -7,7 +7,7 @@
 
 li{
 
-   list-style: none;
+    list-style: none; 
    
 }
 
@@ -73,8 +73,13 @@ a{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 30px;
+   padding: 350px;
+   padding-top: 50px;
+
    
 }
+
+
 .card-1{
     margin: auto ; 
     
@@ -82,12 +87,75 @@ a{
 }
 .detail-1{
    text-align: center;
+   font-size: 22px;
+    font-weight: 500;
 }
 .detail-2{
    text-align: center;
+   font-size: 22px;
+   font-weight: bold;
 }
 .button-1{
-   margin-left: 84px;
+   /* margin-left: 84px; */
+   background-color:  #E95A08;
+  
+   padding: auto;
+   width: 270px;
+   height: 50px;
+   font-size: 16px;
+   font-weight: bold;
+   color: white;
+   outline: auto;
+   
+   
+   
+} 
+
+
+
+
+.fota{
+   list-style: circle;
+   color: #5e5c5c;
+   font-size: 22px;
+   margin-right: 200px;
+}
+
+.challenge-img{
+   width: 540px;
+   height: 597px;
+   margin-left: 300px;
+   margin-top: -100px; 
+   
+}
+
+.challenge-part{
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   
+  
+   
+}
+
+.font-10{
+   font-size: 50px;
+   font-weight: bold;
+   padding-left: 20px;
+}
+
+.challenge-part-2{
+   margin-right: 200px;
+   margin-top: -100px; 
+}
+
+.trust{
+   width: 286px;
+   height: 286px;
+   top: 2140px;
+   right: 900px;
+   position: absolute;
+   
 }
 
 
@@ -141,4 +209,42 @@ a{
 /* end header part */
 
 
+
+.card-8{
+   grid-template-columns: repeat(2, 1fr);
+   padding: 5px;
+   max-width: 100%;
+   
+ 
 }
+
+.card-1 img {
+  width: 100%;  
+  height: auto;     
+  display: block;   
+  max-width: 100%; 
+  box-sizing: border-box;
+}
+
+
+.card-1 {
+  max-width: 100%;   
+  overflow: hidden;  
+}
+
+.button-1{
+   padding-right: 90px;
+}
+   
+    
+   
+ 
+    
+}
+
+
+
+
+
+
+
