--- a/style/index.css
+++ b/style/index.css
@@ -165,6 +165,144 @@ a{
 }
 
 
+/* last main */
+
+.last-main{
+   display: flex;
+   justify-content: space-around;
+   margin-top: 100px;
+}
+
+
+.last-main-1{
+   font-size: 50px;
+   text-align: center;
+   margin-top: 200px;
+}
+
+.last-main-2{
+   font-size: 22px;
+   text-align: center;
+   color: #5e5c5c;
+}
+
+.main-img-1{
+   width: 367px;
+   height: 201px;
+     border-radius: 10px;
+      filter: brightness(0.7);
+}
+.main-img-2{
+   width: 367px;
+   height: 201px;
+   border-radius: 10px;
+    filter: brightness(0.7);
+   
+}
+
+.last-main-img{
+   display: grid;
+   grid-template-columns: repeat(1fr);
+    gap: 25px; 
+    /* margin-left: 350px;  */
+   opacity: 90%;
+}
+.main-img-3{
+   width: 753px;
+   height: 423.13px;
+   border-radius: 10px;
+   margin-right: 250px;
+ filter: brightness(0.7);}
+
+.img-text-1{
+   position: absolute;
+   font-size: 22px;
+   color: rgb(219, 211, 211);
+   top: 3360px;
+   right: 1200px;
+    font-weight: bold;
+     text-align: center;
+
+}
+
+.img-text-2{
+   position: absolute;
+   font-size: 22px;
+   color: rgb(219, 211, 211);
+   top: 3600px;
+   right: 1225px;
+    font-weight: bold;
+     text-align: center;
+
+}
+
+
+.img-text-3{
+   position: absolute;
+   font-size: 40px;
+   color: rgb(255, 255, 255);
+   top: 3450px;
+   left: 1020px;
+    font-weight: bold;
+     text-align: center;
+
+}
+
+.shop-now{
+   text-decoration: underline;
+}
+
+
+.footer-img {
+   width: 100%;
+   margin-top: 100px;
+   display: block;
+   
+   
+   
+}
+
+body, html {
+  margin: 0;
+  padding: 0;
+
+}
+
+.footer-des{
+   font-size: 50px;
+   font-weight: bold;
+   top: 4100px;
+   left: 700px;
+   position: absolute;
+   color: white;
+}
+
+.form{
+   width: 644px;
+   height: 50px;
+   position: absolute;
+   top: 4225px;
+   left: 500px;
+   
+}
+.form::placeholder{
+   font-size: 16px;
+   padding-left: 20px;
+}
+
+.form-button{
+   width: 186px;
+   height: 55.5px;
+   background-color: #E95A08;
+   font-size: 16px;
+   color: rgb(255, 251, 246);
+   font-weight: bold;
+   border: none;
+   position: absolute;
+   right: 567px;
+   top: 4225px;
+}
+
 
 
 /* media query */
@@ -289,6 +427,93 @@ font-weight: bold;
     display: block;
   }
 
+  .last-main{
+   flex-direction: column;
+   gap: 20px;
+   margin-left: 17px;
+  }
+
+  .main-img-1, .main-img-3, .main-img-2{
+   width: 367px;
+   height: 197px;
+   
+  }
+  .img-text-1 {
+     position: absolute;
+
+  top: 4100px;
+  left: 120px;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  font-weight: bold;
+  
+   white-space: nowrap; 
+}
+
+.img-text-2 {
+     position: absolute;
+
+  top: 4330px;
+  left: 120px;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  font-weight: bold;
+  
+   white-space: nowrap; 
+}
+
+.img-text-3{
+     position: absolute;
+
+  top: 4540px;
+  left: 120px;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  font-weight: bold;
+  
+   white-space: nowrap; 
+}
+
+.shop-now{
+   margin-left: 50px;
+}
+#shop-222{
+   margin-left: 10px;
+}
+
+.footer-img{
+   margin-top: 30px;
+   width: 100%;
+   display: block;
+   width: 393px;
+   height: 275px;
+}
+
+
+.footer-des{
+   font-size: 30px;
+   font-weight: bold;
+   top: 4750px;
+   left: 50px;
+   position: absolute;
+   color: rgb(255, 255, 255);
+}
+
+.form{
+   margin-left: -470px;
+   margin-top: 600px;
+   width: 218px;
+   height: 50px;
+}
+
+.form-button {
+    right: 67px;
+    top: 4827px;
+    font-size: 14px;
+    width: 90px;
+    height: 53px;
+  }
+
 
    
     
@@ -308,6 +533,9 @@ font-weight: bold;
    }
    .desktop-only {
     display: block;
+  }
+  .last-main-img{
+   margin-left: 350px;
   }
    
 }
